kubernetes/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: lorem-docu-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: lorem-docu
    spec:
      containers:
      - name: lorem-docu
        image: jakubgawlas/lorem-docu
        ports:
        - containerPort: 3000
