kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lorem-docu-service
spec:
  selector:
    app: lorem-docu
  ports:
    - name: http
      port: 3000
